--- a/project/www/index.html
+++ b/project/www/index.html
@@ -19,6 +19,7 @@
     <!--js読み込み-->
     <script src="app.js"></script> <!--基本的な動き-->
     <script src="base.js"></script> <!-- mBaaSとの連携-->
+    <script src="geo.js"></script><!-- geo取得&保存 -->
 </body>
 
 </html>
