--- a/project/www/menu.html
+++ b/project/www/menu.html
@@ -18,14 +18,14 @@
         
         <ons-list-item
             modifier="tappable" class="list__item__line-height"
-            onclick="app.slidingMenu.setMainPage('<friends></friends>.html', {closeMenu: true})">
+            onclick="app.slidingMenu.setMainPage('friends.html', {closeMenu: true})">
             <i class="fa fa-users fa-lg" style="color: #666"></i>
             &nbsp; Friends
         </ons-list-item>
         
         <ons-list-item
             modifier="tappable" class="list__item__line-height"
-            onclick="app.slidingMenu.setMainPage('page4.html', {closeMenu: true})">
+            onclick="app.slidingMenu.setMainPage('resister.html', {closeMenu: true})">
             <i class="fa fa-comment fa-lg" style="color: #666"></i>
             &nbsp; Report
         </ons-list-item>
