--- a/project/www/page3.html
+++ b/project/www/page3.html
@@ -46,6 +46,7 @@
         </ons-list-item>
     </ons-list>
     
+    <!--modal-->
     <ons-modal var="modal">
         <div id="modal_user" style="display:none;">
             <img src="https://scontent.xx.fbcdn.net/hphotos-xta1/v/t1.0-9/11227381_1395936740733698_9087127374302706450_n.jpg?oh=0ebdcbac0941a5b4fb0141f605ec0c2b&oe=563F8806" height="200" />
