--- a/project/www/page5.html
+++ b/project/www/page5.html
@@ -23,6 +23,7 @@
         </ons-list-item>
     </ons-list>
     
+    <!--modal(これを呼び出す)-->
     <ons-modal var="modal_collaborate">
         <h4>この拠点での戦に参戦しますか？</h4>
         <ons-button modifier="cta" onclick="do_collaborate()">参戦する</ons-button>&nbsp;&nbsp;&nbsp;
