--- a/project/www/friends.html
+++ b/project/www/friends.html
@@ -15,6 +15,7 @@
         <ons-list-item><i class="fa fa-user fa-lg" style="color: #666">　</i>佐々木 小次郎さん</ons-list-item>
         <ons-list-item><i class="fa fa-user fa-lg" style="color: #666">　</i>佐々木 小次郎さん</ons-list-item>
         <ons-list-item><i class="fa fa-user fa-lg" style="color: #666">　</i>佐々木 小次郎さん</ons-list-item>
+        <ons-list-item><i class="fa fa-user fa-lg" style="color: #666">　</i>佐々木 小次郎さん</ons-list-item>
     </ons-list>
     </div>
 </ons-page>
