--- a/project/www/page2.html
+++ b/project/www/page2.html
@@ -1,5 +1,5 @@
 <ons-page>
-<div id="page2">
+<div id="favorite">
     <ons-toolbar>
        <!--ハンバーガーアイコン-->
         <div class="left">
@@ -10,10 +10,9 @@
         <div class="center">Favorite Places</div>
     </ons-toolbar>
     
-    <ons-list class="favorite">
+    <ons-list>
         <ons-list-item><i class="fa fa-map-marker fa-lg" style="color: #666">　</i>鶴ヶ城前休憩所</ons-list-item>
         <ons-list-item><i class="fa fa-map-marker fa-lg" style="color: #666">　</i>スーパー川崎休憩所</ons-list-item>
-        <ons-list-item class="appear" style="display:none;"><i class="fa fa-map-marker fa-lg" style="color: #666">　</i>松代前公園</ons-list-item> <!--@@-->
     </ons-list>
     </div>
 </ons-page>
