--- a/project/www/friends.html
+++ b/project/www/friends.html
@@ -1,5 +1,5 @@
 <ons-page>
-<div class="favorite">
+<div id="friends">
     <ons-toolbar>
         <div class="left">
             <ons-toolbar-button ng-click="app.slidingMenu.toggleMenu()"><ons-icon icon="bars"></ons-icon></ons-toolbar-button>
