--- a/project/www/index.html
+++ b/project/www/index.html
@@ -8,7 +8,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6tf8Bl0jU_0-AJdcr6KAZksD6YKjzGWY&sensor=false" type="text/javascript"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-    
+    <script src="ncmb_js/ncmb.min.js"></script>
     <script src="components/loader.js"></script>
     
 </head>
@@ -17,9 +17,9 @@
     </ons-sliding-menu>
 
     <!--js読み込み-->
-    <script src="app.js"></script> <!--基本的な動き-->
     <script src="base.js"></script> <!-- mBaaSとの連携-->
-    <script src="geo.js"></script><!-- geo取得&保存 -->
+<!--    <script src="geo.js"></script> geo取得&保存 -->
+    <script src="app.js"></script> <!--基本的な動き-->
 </body>
 
 </html>
